hello/Deployment-helloworld.yml
---
kind: "Deployment"
apiVersion: "extensions/v1beta1"
metadata:
  annotations: {}
  name: "helloworld"
  labels:
    nirmata.io/deployment.name: "helloworld"
    nirmata.io/application.name: "hello-world"
    nirmata.io/component: "helloworld"
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      nirmata.io/application.name: "hello-world"
      nirmata.io/component: "helloworld"
    matchExpressions: []
  strategy:
    type: "RollingUpdate"
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    apiVersion: "v1"
    kind: "Pod"
    metadata:
      annotations: {}
      name: "helloworld"
      labels:
        nirmata.io/deployment.name: "helloworld"
        nirmata.io/application.name: "hello-world"
        nirmata.io/component: "helloworld"
    spec:
      terminationGracePeriodSeconds: 30
      nodeSelector: {}
      containers:
      - name: "helloworld"
        image: "nirmata/hello-world:1.8"
        command: []
        args: []
        ports:
        - containerPort: 80
          protocol: "TCP"
